cabal-version:      3.0
name:               repro
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Matthew Pickering
maintainer:         matthewtpickering@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable repro
    import:           warnings
    default-language: GHC2021
    main-is: Main.hs
    other-modules:  TestHighRankSimplified, SizedIndex, TensorClass
    default-extensions: GADTs, TypeFamilies,
                      TypeFamilyDependencies, FunctionalDependencies,
                      RecordWildCards, MultiWayIf, LambdaCase,
                      DefaultSignatures, PatternSynonyms, NoStarIsType,
                      DataKinds
    ghc-options: -fexpose-all-unfoldings -fno-spec-constr -fno-worker-wrapper -fspecialise-aggressively -fsimpl-tick-factor=200 -fno-opt-coercion

    -- other-modules:
    -- other-extensions:
    build-depends:    base, ghc-typelits-knownnat, ghc-typelits-natnormalise
    hs-source-dirs:   .
